@@ -105,7 +105,7 @@ verilog/v_hier_subsub.v:0013: q   cmt=""
 verilog/v_comments.v:0031: a   cmt="// a-First"
 verilog/v_comments.v:0032: b   cmt="// b-Secondparen\n// Third"
 verilog/v_hier_top.v:0042: GLOBAL_PARAM   cmt="// Local Variables:\n// eval:(verilog-read-defines)\n// End:"
-verilog/v_hier_top2.v:0013: iosig   cmt="/* synthesis aftersemi*/\n// NetListName=F12_IO"
+verilog/v_hier_top2.v:0013: iosig   cmt="/* synthesis useioff = 1 //*synthesis fpga_attr = "BLAH=ON"//* synthesis fpga_pin = "A22"*/\n/* synthesis aftersemi*/\n// NetListName=F12_IO"
 verilog/v_hier_top2.v:0009: clk   cmt=""
 verilog/v_hier_noport.v:0006: internal   cmt=""
 verilog/v_comments.v:0016: e   cmt="// Comment for e"
@@ -117,9 +117,9 @@ verilog/v_comments.v:0013: d3   cmt=""
 verilog/v_comments.v:0009: c   cmt="// comment for c"
 verilog/v_comments.v:0008: b   cmt=""
 verilog/v_comments.v:0022: a   cmt="// a-First"
-verilog/v_comments.v:0025: b   cmt="// Third"
-verilog/v_comments.v:0023: m   cmt=""
-verilog/v_hier_sub.v:0009: qvec   cmt=""
+verilog/v_comments.v:0025: b   cmt="// b-Third\n// Third"
+verilog/v_comments.v:0023: m   cmt="// m-Second"
+verilog/v_hier_sub.v:0009: qvec   cmt="/* Comment for v_hier_sub, qvec */"
 verilog/v_hier_sub.v:0027: K_UNUSED   cmt=""
 verilog/v_hier_sub.v:0007: clk   cmt=""
 verilog/v_hier_sub.v:0027: K   cmt=""
